--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -17,6 +17,7 @@
     "http": "^0.0.1-security",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-calendar-picker": "^8.0.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
