--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.73.2",
     "react-native-calendar-picker": "^8.0.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
