--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "datetimepicker": "^0.1.39",
     "expo": "~50.0.4",
     "expo-status-bar": "~1.11.1",
     "http": "^0.0.1-security",
@@ -19,8 +21,7 @@
     "react-native": "0.73.2",
     "react-native-calendar-picker": "^8.0.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "@react-native-community/datetimepicker": "7.6.1"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
