--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "crypto-js": "^4.2.0",
     "datetimepicker": "^0.1.39",
     "expo": "^51.0.6",
     "expo-status-bar": "~1.12.1",
